@@ -12,7 +12,11 @@ copyright notices and license terms. -->
     <xpath
         expr="/form/notebook/page/field[@name=&quot;amount&quot;]"
         position="after">
-        <label name="margin"/>
-        <field name="margin"/>
+        <label name="margin" xalign="1.0" xexpand="1"/>
+        <group id="margin_values" colspan="1" col="3">
+            <field name="margin" xalign="1.0" xexpand="0"/>
+            <field name="margin_percent" factor="100" xalign="1.0" xexpand="0"/>
+            <label name="margin_percent" string="%" xalign="0.0" xexpand="1" xfill="1"/>
+        </group>
     </xpath>
 </data>
