@@ -1,3 +1,5 @@
+* Add margin_percent fields to sale and sale line
+
 Version 3.4.0 - 2014-11-03
 * Add compatibility (as extra dependency) with sale_discount
 * Improve sale line margin computation unifying getter and on_change_with and
